--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
-        "phpunit/phpunit": "^9.5.10"
+        "phpmd/phpmd": "^2.12",
+        "phpunit/phpunit": "^9.5.10",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
