--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5.1.3",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^3.2.33",
+        "vue-loader": "^17.0.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@vue/compiler-sfc": "^3.2.33",
+        "@vue/component-compiler-utils": "^3.3.0",
+        "autoprefixer": "10.4.5"
     }
 }
